manifests/expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-external
  labels:
    io.kompose.service: wordpress
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    io.kompose.service: wordpress
  type: ClusterIP
  externalIPs:
    - <YOUR_PUBLIC_IP>
