manifests/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-loadbalancer
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: wordpress
  type: LoadBalancer
