manifests/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      nodePort: 32765
  selector:
    io.kompose.service: wordpress
  type: NodePort
